[dev] 使用字符串导出时间